Make lambda introduce a context in DU chain

Summary:
Lambda in clang completion were not introducing a context. This
had the effect of making all local variable in a global lambda
highlighted as a global

BUG: 387994

Reviewers: #kdevelop, mwolff

Reviewed By: #kdevelop, mwolff

Subscribers: kfunk, mwolff, kdevelop-devel

Differential Revision: https://phabricator.kde.org/D11303